# canary

./: .credo.exs  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .landmark.yml  .mix_audit.ignore  .spellbook.yaml  .tool-versions  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PRINCIPLES.md  PROJECT.md  README.md  SECURITY.md  VISION.md  dagger.json  docker-compose.yml  fly.toml  litestream.yml  mix.exs  project.md  spec.md
.backlog.d/: 001-connect-a-service-workflow.md  004-networked-service-dogfooding-wave.md  006-monorepo-bootstrap-and-contributor-path.md  007-security-and-governance-baseline.md  README.md
.codex/: config.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.groom/: BACKLOG.md  plan-2026-03-15.md  plan-2026-03-15b.md  plan-2026-03-20.md  plan-2026-03-22.md  review-scores.ndjson
.pi/: settings.json
.spellbook/: repo-brief.md
backlog.d/: 001-annotations-api.md  001-ramp-pattern.md  002-timeline-agent-polling.md  003-triage-diagnostic-webhooks-non-fatal.md  004-incident-correlation-failure-paths.md  005-connect-a-service-workflow.md  006-split-query-read-models.md  007-networked-service-dogfooding.md  008-security-governance-baseline.md  009-desktop-health-semantics-research.md  010-ramp-pattern.md  011-agent-integration-docs.md  012-webhook-delivery-ledger.md  013-self-observability-metrics.md  014-backup-restore-dr.md  015-product-security-controls.md  016-immutable-ci-control-plane.md  017-dagger-source-contract-and-cache-portability.md  018-local-docker-probe-hardening.md  019-dagger-strict-contract-hardening.md  020-adminifi-http-surface-verification.md  021-check-in-monitors-for-non-http-runtimes.md  023-incident-as-atomic-agent-unit.md  025-audit-test-helpers-for-pk-cast-drop.md  026-credo-check-ecto-pk-via-cast.md  027-credo-check-preload-then-take.md  028-openapi-ecto-type-parity-lane.md  029-code-review-pattern-catalog.md  030-agent-contract-safety.md  031-agent-replay-determinism-hardening.md  032-live-rust-write-path-evidence.md  033-dogfood-surface-registry-lifecycle.md  034-worker-lifecycle-readiness-oracle.md  035-deployed-app-canary-coverage.md  036-agent-native-inspection-surface.md  037-watch-the-watchmen.md  038-one-command-integration-agent.md  039-external-user-security-privacy-foundation.md  040-universal-integration-enrollment-engine.md  041-live-integration-verification-harness.md  (+34 more)
canary_sdk/: .gitignore  .mix_audit.ignore  mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
contracts/: release-manifest.v1.schema.json  runtime-config.v1.schema.json
crates/canary-cli/: Cargo.toml
crates/canary-cli/src/: canary_adapter.ts  lib.rs  main.rs
crates/canary-cli/tests/: contract_parity.rs  fixtures.rs  mcp_stdio.rs
crates/canary-cli/tests/fixtures/: doctor_watchman_down.json  dogfood_inventory.json  incidents.json  monitors.json  query.json  report.json  targets.json  timeline.json
crates/canary-cli/tests/support/: mod.rs
crates/canary-core/: Cargo.toml
crates/canary-core/proptest-regressions/ingest/: grouping.txt
crates/canary-core/src/: ids.rs  lib.rs  metrics.rs  query.rs  redaction.rs  secrets.rs  slo.rs  webhook_events.rs
crates/canary-core/src/health/: mod.rs  state_machine.rs
crates/canary-core/src/ingest/: classification.rs  grouping.rs  mod.rs
crates/canary-core/tests/: ingest_parity.rs
crates/canary-http/: Cargo.toml  build.rs
crates/canary-http/src/: auth.rs  lib.rs  problem_details.rs  public.rs  rate_limit.rs  request.rs  webhooks.rs
crates/canary-http/tests/: webhook_receiver_conformance.rs
crates/canary-ingest/: Cargo.toml
crates/canary-ingest/src/: lib.rs
crates/canary-server/: Cargo.toml
crates/canary-server/src/: admin_keys.rs  admin_monitors.rs  admin_targets.rs  admin_webhooks.rs  annotations.rs  auth_cache.rs  body_fields.rs  claims.rs  dashboard_routes.rs  egress.rs  health_fanout.rs  health_routes.rs  http_contract.rs  incident_escalation.rs  ingest_routes.rs  keygen.rs  lib.rs  main.rs  metrics_routes.rs  monitor_overdue.rs  public_routes.rs  query_routes.rs  rate_limit.rs  read_audit.rs  read_source.rs  report_routes.rs  responder_context.rs  retention_prune.rs  route_state.rs  runtime.rs  runtime_env.rs  server_auth.rs  server_time.rs  service_onboarding_routes.rs  target_probes.rs  target_request.rs  telemetry_routes.rs  tls_scan.rs  webhook_delivery.rs  webhook_delivery_routes.rs  (+2 more)
crates/canary-server/static/dashboard/: aesthetic.css  app.js  dashboard.css  index.html
crates/canary-store/: Cargo.toml
crates/canary-store/examples/: generate_fixtures.rs
crates/canary-store/src/: annotations.rs  api_keys.rs  claims.rs  escalation.rs  fixtures.rs  health.rs  incidents.rs  ingest.rs  lib.rs  metrics.rs  oban_jobs.rs  query.rs  rate_limits.rs  read_pool.rs  retention.rs  schema.rs  scope.rs  seeds.rs  service_sli.rs  telemetry.rs  verification.rs  webhook_deliveries.rs
crates/canary-store/tests/: legacy_fixture_compat.rs  phoenix_fixture_compat.rs
crates/canary-store/tests/fixtures/: legacy_read_models.db  phoenix_schema.db  rust_read_models.db  rust_schema.db
crates/canary-workers/: Cargo.toml
crates/canary-workers/src/: health.rs  lib.rs  retention.rs  tls_scan.rs  webhooks.rs
dagger/: package-lock.json  package.json
docs/: agent-first-identity.md  agent-inspection-cli.md  api-key-rotation.md  backup-restore-dr.md  canary-witness.md  ci-control-plane.md  compatibility-policy.md  dogfood-watchmen-design.md  factory-fleet-integration.md  fleet-conflict-primitive-spike.md  governance.md  networked-service-dogfooding.md  non-http-health-semantics.md  operator-dashboard-removal.md  portable-runtime-contract.md  remediation-claims.md  responder-context-safety.md  rust-consumer-integration.md  self-host-docker.md  self-host-fly.md  telemetry-analytics-signal-model.md  upgrade-and-rollback.md
lib/: canary.ex  canary_web.ex
site/: DESIGN.md  changelog.html  features.html  get-started.html  index.html  marketing.css
skill/: SKILL.md
triage/: .gitignore  AGENTS.md  (+4 more)
(+433 files in other folders)
