[package]
name = "canary-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canary-core = { path = "../canary-core" }
canary-store = { path = "../canary-store" }
regex = "1.12"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2.0"

[lints]
workspace = true
