[package]
name = "canary-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
canary-ingest = { path = "../canary-ingest" }
canary-http = { path = "../canary-http" }
canary-store = { path = "../canary-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
