[package]
name = "canary-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
canary-ingest = { path = "../canary-ingest" }
canary-core = { path = "../canary-core" }
canary-http = { path = "../canary-http" }
canary-store = { path = "../canary-store" }
canary-workers = { path = "../canary-workers" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
bcrypt = "0.17.1"
tokio = { version = "1.48", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
