[package]
name = "canary-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
bcrypt = "0.17.1"
canary-ingest = { path = "../canary-ingest" }
canary-core = { path = "../canary-core" }
canary-http = { path = "../canary-http" }
canary-store = { path = "../canary-store" }
canary-workers = { path = "../canary-workers" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
x509-parser = "0.18"

[dev-dependencies]
rcgen = "0.14"
tokio = { version = "1.48", features = ["macros", "net", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
