[package]
name = "canary-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bcrypt = "0.17.1"
canary-core = { path = "../canary-core" }
rusqlite = { version = "0.37", features = ["bundled", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2.5"

[lints]
workspace = true
