[package]
name = "canary-workers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canary-core = { path = "../canary-core" }
canary-http = { path = "../canary-http" }
canary-store = { path = "../canary-store" }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[lints]
workspace = true
